Fix issue with subscription cancellation  (#1408)
* build and run frontend when calling :bootRun

* implement SubscriptionReservationManager

* implement EventReservationManager

* add test

* remove unused field