@@ -28,7 +28,6 @@ import alfio.manager.system.ConfigurationLevel;
 import alfio.manager.system.ConfigurationManager;
 import alfio.manager.user.UserManager;
 import alfio.model.*;
-import alfio.model.AdditionalServiceItem.AdditionalServiceItemStatus;
 import alfio.model.PriceContainer.VatStatus;
 import alfio.model.PromoCodeDiscount.CodeType;
 import alfio.model.PurchaseContext.PurchaseContextType;
@@ -50,6 +49,7 @@ import alfio.model.result.ErrorCode;
 import alfio.model.result.Result;
 import alfio.model.result.WarningMessage;
 import alfio.model.subscription.*;
+import alfio.model.system.command.CleanupReservations;
 import alfio.model.system.command.FinalizeReservation;
 import alfio.model.system.command.InvalidateAccess;
 import alfio.model.transaction.*;
@@ -174,7 +174,6 @@ public class TicketReservationManager {
     private final ReservationAuditingHelper auditingHelper;
     private final ReservationFinalizer reservationFinalizer;
     private final AdditionalServiceManager additionalServiceManager;
-    private final AdditionalServiceItemRepository additionalServiceItemRepository;
 
     public TicketReservationManager(EventRepository eventRepository,
                                     OrganizationRepository organizationRepository,
@@ -210,8 +209,7 @@ public class TicketReservationManager {
                                     ReservationCostCalculator reservationCostCalculator,
                                     ReservationEmailContentHelper reservationHelper,
                                     ReservationFinalizer reservationFinalizer,
-                                    OrderSummaryGenerator orderSummaryGenerator,
-                                    AdditionalServiceItemRepository additionalServiceItemRepository) {
+                                    OrderSummaryGenerator orderSummaryGenerator) {
         this.eventRepository = eventRepository;
         this.organizationRepository = organizationRepository;
         this.ticketRepository = ticketRepository;
@@ -228,7 +226,6 @@ public class TicketReservationManager {
         this.templateManager = templateManager;
         this.waitingQueueManager = waitingQueueManager;
         this.requiresNewTransactionTemplate = new TransactionTemplate(transactionManager, new DefaultTransactionDefinition(TransactionDefinition.PROPAGATION_REQUIRES_NEW));
-        this.additionalServiceItemRepository = additionalServiceItemRepository;
         DefaultTransactionDefinition serialized = new DefaultTransactionDefinition(TransactionDefinition.PROPAGATION_REQUIRES_NEW);
         serialized.setIsolationLevel(TransactionDefinition.ISOLATION_SERIALIZABLE);
         this.serializedTransactionTemplate = new TransactionTemplate(transactionManager, serialized);
@@ -1036,28 +1033,12 @@ public class TicketReservationManager {
 
         var toDelete = expiredReservationIds.stream()
             .filter(id -> !reservationsToIgnore.contains(id))
-            .collect(toList());
+            .toList();
 
-        specialPriceRepository.resetToFreeAndCleanupForReservation(toDelete);
-        ticketRepository.resetCategoryIdForUnboundedCategories(toDelete);
         purchaseContextFieldRepository.deleteAllValuesForReservations(toDelete);
-        subscriptionRepository.deleteSubscriptionWithReservationId(toDelete);
-        ticketRepository.freeFromReservation(toDelete);
+        applicationEventPublisher.publishEvent(new CleanupReservations(null, toDelete, true));
         waitingQueueManager.cleanExpiredReservations(toDelete);
-
-        //
-        Map<Integer, List<ReservationIdAndEventId>> reservationIdsByEvent = ticketReservationRepository
-            .getReservationIdAndEventId(toDelete)
-            .stream()
-            .collect(Collectors.groupingBy(ReservationIdAndEventId::getEventId));
-        reservationIdsByEvent.forEach((eventId, reservations) -> {
-            Event event = eventRepository.findById(eventId);
-            List<String> reservationIds = reservations.stream().map(ReservationIdAndEventId::getId).collect(toList());
-            extensionManager.handleReservationsExpiredForEvent(event, reservationIds);
-            billingDocumentRepository.deleteForReservations(reservationIds, eventId);
-            transactionRepository.deleteForReservations(reservationIds);
-        });
-        //
+        transactionRepository.deleteForReservations(toDelete);
         ticketReservationRepository.remove(toDelete);
     }
 
@@ -1243,8 +1224,6 @@ public class TicketReservationManager {
             cleanupReferencesToReservation(expired, username, reservationId, pc);
             removeReservation(pc, reservation, expired, username);
         });
-
-
     }
 
     private void creditReservation(TicketReservation reservation, String username, boolean sendEmail) {
@@ -1258,22 +1237,9 @@ public class TicketReservationManager {
 
     private void cleanupReferencesToReservation(boolean expired, String username, String reservationId, PurchaseContext purchaseContext) {
         List<String> reservationIdsToRemove = singletonList(reservationId);
-        specialPriceRepository.resetToFreeAndCleanupForReservation(reservationIdsToRemove);
-        groupManager.deleteWhitelistedTicketsForReservation(reservationId);
-        ticketRepository.resetCategoryIdForUnboundedCategories(reservationIdsToRemove);
         int tfvDeleted = purchaseContextFieldRepository.deleteAllValuesForReservations(reservationIdsToRemove);
         log.debug("deleted {} field values", tfvDeleted);
-        subscriptionRepository.deleteSubscriptionWithReservationId(List.of(reservationId));
-        purchaseContext.event().ifPresent(event -> {
-            int deletedItems = additionalServiceItemRepository.deleteAdditionalServiceItemsByReservationId(event.getId(), reservationId);
-            int updatedItems = additionalServiceItemRepository.revertAdditionalServiceItemsByReservationId(event.getId(), reservationId);
-            log.debug("Deleted {} and updated {} additionalServiceItems for reservation {}", deletedItems, updatedItems, reservationId);
-            int updatedAS = additionalServiceManager.updateStatusForReservationId(event.getId(), reservationId, expired ? AdditionalServiceItemStatus.EXPIRED : AdditionalServiceItemStatus.CANCELLED);
-            int updatedTickets = ticketRepository.findTicketIdsInReservation(reservationId).stream().mapToInt(
-                tickedId -> ticketRepository.releaseExpiredTicket(reservationId, event.getId(), tickedId, UUID.randomUUID().toString(), UUID.randomUUID())
-            ).sum();
-            Validate.isTrue(updatedTickets  + updatedAS > 0, "no items have been updated");
-        });
+        applicationEventPublisher.publishEvent(new CleanupReservations(purchaseContext, List.of(reservationId), expired));
         transactionRepository.deleteForReservations(List.of(reservationId));
         waitingQueueManager.fireReservationExpired(reservationId);
         auditingRepository.insert(reservationId, userRepository.nullSafeFindIdByUserName(username).orElse(null), purchaseContext.event().map(Event::getId).orElse(null), expired ? Audit.EventType.CANCEL_RESERVATION_EXPIRED : Audit.EventType.CANCEL_RESERVATION, new Date(), Audit.EntityType.RESERVATION, reservationId);
@@ -1287,12 +1253,6 @@ public class TicketReservationManager {
         int result = billingDocumentRepository.deleteForReservation(reservationIdToRemove);
         if(result > 0) {
             log.warn("deleted {} documents for reservation id {}", result, reservationIdToRemove);
-        }
-        //
-        if(expired) {
-            extensionManager.handleReservationsExpiredForEvent(purchaseContext, wrappedReservationIdToRemove);
-        } else {
-            extensionManager.handleReservationsCancelledForEvent(purchaseContext, wrappedReservationIdToRemove);
         }
         int removedReservation = ticketReservationRepository.remove(wrappedReservationIdToRemove);
         Validate.isTrue(removedReservation == 1, "expected exactly one removed reservation, got " + removedReservation);
@@ -1612,6 +1572,7 @@ public class TicketReservationManager {
         auditingRepository.insert(reservationId, null, event.getId(), Audit.EventType.CANCEL_TICKET, new Date(), Audit.EntityType.TICKET, Integer.toString(ticket.getId()));
 
         if(ticketRepository.countTicketsInReservation(reservationId) == 0 && transactionRepository.loadOptionalByReservationId(reservationId).isEmpty()) {
+            cleanupReferencesToReservation(false, null, ticketReservation.getId(), event);
             removeReservation(event, ticketReservation, false, null);
             auditingRepository.insert(reservationId, null, event.getId(), Audit.EventType.CANCEL_RESERVATION, new Date(), Audit.EntityType.RESERVATION, reservationId);
         }
